--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "sweetalert2": "^10.11.1",
+    "validator": "^13.5.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
