--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-    "homepage": "https://github.com/alejandrolgarcia/react-journal-app",
     "name": "react-journal-app",
     "version": "1.0.0",
     "private": true,
@@ -25,9 +24,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "eject": "react-scripts eject"
     },
     "eslintConfig": {
         "extends": [
@@ -47,7 +44,5 @@
             "last 1 safari version"
         ]
     },
-    "devDependencies": {
-        "gh-pages": "^3.1.0"
-    }
+    "devDependencies": {}
 }
